Dokumentovane sve domenske klase i dodat lombok za gettere, settere i prazan konstruktor